src/test/ui/issues/30000-39999/issue-35241.rs
struct Foo(u32);

fn test() -> Foo { Foo } //~ ERROR mismatched types

fn main() {}
